[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
bollard = { version = "0.15", features = ["ssl"] }
rand = "0.8"
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
